[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bwenv"
version = "1.0.0"
authors = [
  { name="Arkin Modi", email="arkinmodi@gmail.com" },
]
description = "Securely use and share environment variables in your local development using Bitwarden"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dependencies = [
    "python-dotenv>=0.8.0"
]

[project.urls]
"Homepage" = "https://github.com/arkinmodi/bitwarden-env"

[project.scripts]
bwenv = "bw_env:main"
